# todoroki-server

./: .dockerignore  .sample.env  Cargo.toml  Dockerfile  compose.yaml  dev.Dockerfile  migration.Dockerfile  schema.yaml
.github/workflows/: build-and-push.yaml  prod-migration.yaml
.sqlx/: query-074694742fd4aa08d32f3a90c05a7f3b71864a56e80e1bc238cb9579a75cd517.json  query-388ffd6a6c144412830c8fe065f87b09757695c829489158fc6b743634e20314.json  query-50ca0049379b1e10c9c5037e94e2e26b078616e86dd310a0d21609224a1cd3eb.json  query-5d8319ad0cdc3ebb5463c4fd20be1c790fedad4ea216534960fbe9cf7f6180ac.json  query-6463bfb724807559591391bbfbd64a2c17545c9ef191221980fce9709724e422.json  query-6f621aee802844dbd8fe00a07f3eac986584b9101ffb9c54e78ec8b7c38645b0.json  query-71e0ef708d83a9c2c8f96e37854c1ad2f8d41ea3134c333c72cf80d5fccc9038.json  query-7aca1c5d157bd79b50459242f4778c99e0db6085d0360e43b94b6d148ad44f67.json  query-81d0f65c40a6554d65fcc9a9b3f7d9b4c945a378772ad2bf29bac4c2579f0e61.json  query-86ae7b3b27e36115e17e680c91fd9a2d76e6fe79abbba23b7f14f6d37cb50db8.json  query-ae3940629c6c6cca99df6c65a63c7ae620656aa28840f28f20ed1384814651a6.json  query-b5cab66cb05b05ffd7dfefd7a81d8965ae13f24ccfd19c377ce00a87895d8ce2.json  query-c56523094de2d4cac0ceb78064d44f2509e9263d0678349a4292327b7c8092b7.json  query-ca487b460f96334152fe3b63b08fadfc010ca87aeb4fd48a26ede5929d08720d.json  query-da3adabd32c3d5bcba7b643daf5375d50e4bf9ddd2574ae3ed905fe32405c1a5.json  query-e1f27157d07f9c25018ac20c3357353105aac3cd68e7ff64048f3111b2bff4b3.json  query-e75131405abb85367b76510c4dae4562e2e639143b9b64788976e45b400229f2.json  query-f6192ad4d064637c9480913ce3680e07bf89d1f185d980142682d3d915e4a1d3.json
crates/todoroki-domain/: Cargo.toml
crates/todoroki-domain/src/: entities.rs  lib.rs  repositories.rs  value_objects.rs
crates/todoroki-infrastructure/: Cargo.toml
crates/todoroki-infrastructure/src/: doit.rs  label.rs  lib.rs  shared.rs  todo.rs  user.rs  user_auth.rs
crates/todoroki-infrastructure/src/shared/: postgresql.rs
crates/todoroki-presentation/: Cargo.toml
crates/todoroki-presentation/src/: config.rs  context.rs  lib.rs  main.rs  modules.rs  routes.rs
crates/todoroki-presentation/src/middlewares/: auth.rs
crates/todoroki-presentation/src/models/: requests.rs  responses.rs
crates/todoroki-presentation/src/models/requests/: doit.rs  label.rs  todo.rs  user.rs
crates/todoroki-presentation/src/models/responses/: doit.rs  error.rs  label.rs  success.rs  todo.rs  user.rs
crates/todoroki-presentation/src/routes/: doit.rs  health.rs  label.rs  todo.rs  user.rs
crates/todoroki-use-case/: Cargo.toml
crates/todoroki-use-case/src/: doit.rs  label.rs  (+4 more)
migrations/: 20251018091916_todos.sql  20251109071330_users.sql  20251115040036_label_color.sql  20251117031653_doits.sql  20251117234359_todo_schedules.sql  20251121052436_label_name_unique_constraint.sql
release/: Dockerfile  compose.yaml  migration.Dockerfile
(+24 files in other folders)
