[workspace]
members = [
  "crates/todoroki-presentation",
  "crates/todoroki-domain",
  "crates/todoroki-infrastructure",
  "crates/todoroki-use-case"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = [ "full" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
getset = "0.1.5"
uuid = { version = "1.18.1", features = [ "v4", "serde" ] }
chrono = { version = "0.4.41", features = [ "serde" ] }
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = [ 
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono"
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
utoipa = { version = "5.3.1", features = ["axum_extras", "yaml"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.1.0", features = [ "rust_crypto" ] }
reqwest = { version = "0.12.24", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
